Update Music Recommendation System with Spotify API.ipynb

--- a/Music Recommendation System with Spotify API.ipynb
+++ b/Music Recommendation System with Spotify API.ipynb
@@ -19,8 +19,8 @@
     "import base64\n",
     "\n",
     "# Replace with your own Client ID and Client Secret\n",
-    "CLIENT_ID = 'bb6713a9985247af9895a58f5e93ab78'\n",
-    "CLIENT_SECRET = '7821ff8570b54f949b75e3eef85712b9'\n",
+    "CLIENT_ID = 'Your Client id'\n",
+    "CLIENT_SECRET = 'Your Client Secret'\n",
     "\n",
     "# Base64 encode the client ID and client secret\n",
     "client_credentials = f\"{CLIENT_ID}:{CLIENT_SECRET}\"\n",
